# smalifuzz

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
smalifuzz/: __main__.py  cli.py  core.py  helpers.py
tests/: context.py  integration_test.py  unit_test.py
tests/test_vectors/: app-release0.apk
